res/examples/valid/type_alias.eg
type NumberList = list<number>;

let a: NumberList = [1, 2, 3];